<resources>
    <string name="app_name">生活小助手</string>
    <!--  >>>>>>>>>>>>>>>>>> 设置 <<<<<<<<<<<<<<<<<<<<< -->
    <string name="xiaoquguanjia">生活小助手 · 生活好帮手</string>
    <string name="about_app_version">生活小助手1.0</string>
    <string name="version_num">生活小助手 </string>
    <string name="activity_about_software">关于本软件：</string>
    <string name="activity_about_software_detail">本软件是一款免费的生活工具，旨在为大家的生活提供便利。软件包含了新闻头条、微信精选、笑话大全、万年历、在线电影院、在线票房、星座运势、股票数据、问答机器人等几大功能，均采用网络最新数据，因此需要联网操作。\n最后，感谢使用生活小助手工具，也欢迎提出改进建议，谢谢！</string>
    <string name="activity_contact_way">联系方式：</string>
    <string name="activity_contact_way_detail">123500734@qq.com</string>
    <string name="our_company">chaoshanquan studio</string>
    <string name="our_company_url">www.xiaoquguanjia.cn</string>
    <string name="biaoshi">Copyright @ 2017 All Right Reserved</string>
    <!--  >>>>>>>>>>>>>>>>>> 设置 <<<<<<<<<<<<<<<<<<<<<<<< -->


    <!-- ///////////////////////////// -->
    <string name="network_is_disabled">网络不可用，请检查一下您的网络</string>
    <string name="network_interrupted">网络中断，请检查您的网络状态</string>
    <string name="example_show_request_result">显示请求结果</string>
    <string name="example_request_api">请求接口</string>

    <string name="activity_news">新闻头条</string>
    <string name="activity_wechat_handpick">微信精选</string>
    <string name="activity_joke">笑话大全</string>
    <string name="activity_calendar">万年历</string>
    <string name="activity_movie">在线电影票</string>
    <string name="activity_box_office">电影票房</string>
    <string name="activity_horoscope">星座运势</string>
    <string name="activity_stock">股票数据</string>
    <string name="activity_qarobot">问答机器人</string>
    <string name="activity_my_message">我的消息</string>

    <string name="news_tab0">头条</string>
    <string name="news_tab1">社会</string>
    <string name="news_tab2">国内</string>
    <string name="news_tab3">国际</string>
    <string name="news_tab4">娱乐</string>
    <string name="news_tab5">体育</string>
    <string name="news_tab6">军事</string>
    <string name="news_tab7">科技</string>
    <string name="news_tab8">财经</string>
    <string name="news_tab9">时尚</string>

    <string name="my_save_no_content">暂无相关内容</string>
    <string name="close">关闭</string>
    <string name="error_web_parser">网页解析错误！</string>

    <string name="send">发送</string>
    <string name="no_data">暂无数据</string>
    <string name="no_more_data">无更多数据</string>

    <string name="stock_gid_hint">股票编号,深圳股市以sz开头,如:sz000001</string>
    <string name="show_detail">查看详情</string>
    <string name="jpush_message_content">\t\t\t\t您好！感谢使用本软件，如果使用中有体验不好地方，请反馈给我们，我们将逐步改善，谢谢！</string>


</resources>
